Fixed height of app container on mobile only

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1202,7 +1202,7 @@
 	    padding: 50px 0 0;
 	}
 	body.application .smcx-embed {
-	    height: 1900px;
+	    height: 4000px;
 	}
 	body.faq #section-faqs .container {
 		width: 100% !important;
